--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://haogeun0119.github.io
 # When your site is in a subdirectory, set to `/<name of directory>`,
 # with a leading `/` but no trailing `/`. Use the empty string '' otherwise.
 # NOTE: You don't need to provide this property when hosting on GitHub Pages or Netlify.
-# baseurl:               '/hydejack-starter-kit'
+# baseurl: "/hydejack-starter-kit"
 
 # General settings
 # ---------------------------------------------------------------------------------------
@@ -78,7 +78,7 @@ paginate_path: /:num/
 # ---------------------------------------------------------------------------------------
 
 theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+#remote_theme: hydecorp/hydejack@v9
 
 # Customizaton
 # ----------------------------------------------------------------------------------------
