--- a/_config.yml
+++ b/_config.yml
@@ -47,11 +47,11 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title: Example
-    url: /example/
-  - title: Documentation
-    url: /docs/
   - title: About
+    url: /about/
+  - title: Front-End Study
+    url: /about/
+  - title: Back-End Study
     url: /about/
 
 # Add links to the footer.
