gitBlog File Test

--- a/_config.yml
+++ b/_config.yml
@@ -47,12 +47,19 @@ author:
 
 # Add links to the sidebar.
 menu:
-  - title: Example
-    url: /example/
-  - title: Documentation
-    url: /docs/
   - title: About
     url: /about/
+  - title: Front-End Study
+    url: /about/
+  - title: Back-End Study
+    url: /about/
+  - title: SubCat
+    url: /about/
+    submenu:
+      -title: Test1
+        url: /test1/
+      -title: Test2
+        url: /test2/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
