--- a/_config.yml
+++ b/_config.yml
@@ -61,8 +61,6 @@ menu:
       - title: Test2
         url: /test2/
 
->>>>>>> 33e05682ae356bdff4a041858a8bc1bd76eedeac
-
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
 legal:
@@ -86,7 +84,7 @@ paginate_path: /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-#theme: jekyll-theme-hydejack
+theme: jekyll-theme-hydejack
 remote_theme: hydecorp/hydejack@v9
 
 # Customizaton
