--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ url: https://haogeun0119.github.io
 lang: ko-KR, en-US
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title: 개발 블로그
+title: Study-Blog
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description: >
-  개발 블로그입니다.
+  스터디 블로그입니다.
 
 # A shorter description for the sidebar.
 tagline: gitBlog
@@ -35,7 +35,7 @@ keywords: [front-end, back-end, full-stack]
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
 # It also used by the `jekyll-seo-tag` plugin.
-logo: /assets/img/logo.png
+logo: \assets\img\free-icon-light-bulb-312562.png
 
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
@@ -50,16 +50,21 @@ menu:
   - title: About
     url: /about/
   - title: Front-End
-    url: /FrontEnd/
-  - title: Back-End
-    url: /BackEnd/
-  - title: SubCat
-    url: /subcat/
+    url: /Front-End/
     submenu:
-      - title: Test1
-        url: /test1/
-      - title: Test2
-        url: /test2/
+      - title: Book
+        url: /Book/
+      - title: Thesis
+        url: /Thesis/
+      - title: Video
+        url: /Video/
+  - title: Vacation-Study
+    url: /Vacation-Study/
+    submenu:
+      - title: 2022-Winter
+        url: /2022-Winter/
+      - title: 2022-Summer
+        url: /2022-Summer/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -84,8 +89,8 @@ paginate_path: /:num/
 # Theme
 # ---------------------------------------------------------------------------------------
 
-#theme: jekyll-theme-hydejack
-remote_theme: hydecorp/hydejack@v9
+theme: jekyll-theme-hydejack
+#remote_theme: hydecorp/hydejack@v9
 
 # Customizaton
 # ----------------------------------------------------------------------------------------
